--- a/templates/about.html
+++ b/templates/about.html
@@ -69,9 +69,108 @@
     <div class="row mt-4">
       {% include 'Heathcliff.html' %} {% include 'Ishmael.html' %} {% include 'Rodion.html' %}
     </div>
-    <div class="row mt-4"> 
+    <div class="row mt-4">
       {% include 'Sinclair.html' %} {% include 'Outis.html' %} {% include 'Gregor.html' %}
     </div>
   </section>
 </div>
+
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Card Title 1</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Card1Modal">
+            Read more
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="Card1Modal" tabindex="-1" aria-labelledby="Card1Modal" data-bs-backdrop="static"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="Card1Modal">Card Title 1</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" style="text-align: left">
+                  Detailed information about Card Title 1.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Card Title 2</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Card2Modal">
+            Read more
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="Card2Modal" tabindex="-1" aria-labelledby="Card2Modal" data-bs-backdrop="static"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="Card2Modal">Card Title 2</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" style="text-align: left">
+                  Detailed information about Card Title 2.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Card Title 3</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#Card3Modal">
+            Read more
+          </button>
+          <!-- Modal -->
+          <div class="modal fade" id="Card3Modal" tabindex="-1" aria-labelledby="Card3Modal" data-bs-backdrop="static"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="Card3Modal">Card Title 3</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" style="text-align: left">
+                  Detailed information about Card Title 3.
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
