--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,6 @@
         border-radius: 1rem;
         width: auto;
         height: auto;
-
     }
 </style>
 <h1>Create an Account</h1>
@@ -45,7 +44,7 @@
         </div>
         <button type="submit" class="btn btn-primary"
             style="background-color: #1f25a5; border-width: 0px;">Register</button>
-        <br><a href="/login" style="font-size:medium;"">Already got an account? Login here</a>
+        <br><a href="/login" style="font-size:medium;">Already got an account? Login here</a>
     </form>
 </div>
 {% if form.errors %}
